--- a/proyecto1/nbproject/project.properties
+++ b/proyecto1/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=proyecto1
-main.class=
+main.class=PokerDeDados.Pantalla
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
